Fix resize causing gaps between text and img

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -4211,10 +4211,12 @@
             flex-basis: auto;
             background: black;
             position: relative;
+            height: 100%;
 
             @include mobile {
                 flex-basis: 0;
                 padding: 0;
+                height: auto;
             }
             
             h2 {
